<resources>
    <string name="app_name">Manetes Artistes</string>


    <string name="simon_says_yellow">groc</string>
    <string name="simon_says_blue">blau</string>
    <string name="simon_says_red">vermell</string>
    <string name="simon_says_green">verd</string>
    <string name="play">JUGAR</string>
    <string name="simon_says_full">Full simon says</string>
    <string name="score">0</string>
    <string name="backButon">Back button</string>
    <string name="sticker_button">Sticker Button</string>
    <string name="mainColoringButton">Main Coloring Button</string>
    <string name="mainSimonButton">Main Simon Button</string>
    <string name="changeStickerButton">Change Sticker Button</string>
    <string name="exit">Exit</string>
    <string name="done">done</string>
    <string name="selecciona">SELECCIONA UN DIBUIX</string>
    <string name="score_text">PUNTUACIÓ</string>
    <string name="s_ha_produit_un_error_inesperat">S\'ha produit un error inesperat</string>
    <string name="tornar_a_intentar">Tornar a intentar</string>
    <string name="no_hi_ha_connexi_a_internet_connecta_t">No hi ha connexió a internet, connecta\'t</string>
</resources>