<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_black"
    tools:context=".games.simon_says.activities.GameActivitySimonSays">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/simonHead"
            android:gravity="center"
            android:collapseColumns="3"
            android:stretchColumns="1"
            >
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include layout="@layout/back_button"
                    android:layout_width="@dimen/backButton"
                    android:layout_height="@dimen/backButton"
                    android:layout_marginHorizontal="@dimen/backButtonMargin"/>

                <TextView
                    android:id="@+id/score"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/score"
                    android:textSize="50sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/itim">
                </TextView>
                <Space
                    android:layout_width="@dimen/backButton"
                    android:layout_height="@dimen/backButton"
                    android:layout_marginHorizontal="@dimen/backButtonMargin">
                </Space>
            </TableRow>
        </TableLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2"
            >

            <ImageButton
                android:id="@+id/yellowBtn"
                android:background="@drawable/simon_says_yellow_button_off"
                android:layout_width="@dimen/simonButton"
                android:layout_height="@dimen/simonButton"
                android:contentDescription="@string/simon_says_yellow">
            </ImageButton>

            <ImageButton
                android:id="@+id/blueBtn"
                android:background="@drawable/simon_says_blue_button_off"
                android:layout_width="@dimen/simonButton"
                android:layout_height="@dimen/simonButton"
                android:contentDescription="@string/simon_says_blue">
            </ImageButton>

            <ImageButton
                android:id="@+id/redBtn"
                android:background="@drawable/simon_says_red_button_off"
                android:layout_width="@dimen/simonButton"
                android:layout_height="@dimen/simonButton"
                android:contentDescription="@string/simon_says_red">
            </ImageButton>

            <ImageButton
                android:id="@+id/greenBtn"
                android:background="@drawable/simon_says_green_button_off"
                android:layout_width="@dimen/simonButton"
                android:layout_height="@dimen/simonButton"
                android:contentDescription="@string/simon_says_green">
            </ImageButton>

        </GridLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>