<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_black"
    tools:context=".menus.activities.MainMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/mainColoringButton"
            android:layout_width="@dimen/mainButtonsWidth"
            android:layout_height="@dimen/mainButtonsHeight"
            android:contentDescription="@string/mainColoringButton"
            android:layout_marginBottom="-10dp"
            android:background="@drawable/explorer_girl"/>
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center|top">
            <Space
                android:layout_height="30dp"
                android:layout_width="match_parent"/>
            <ImageButton
                android:id="@+id/changeStickerButton"
                android:layout_width="@dimen/stickerButton"
                android:layout_height="@dimen/stickerButton"
                android:contentDescription="@string/changeStickerButton"
                android:layout_marginTop="33dp"
                android:background="@drawable/pig"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/mainSimonButton"
            android:layout_width="@dimen/mainButtonsWidth"
            android:layout_height="@dimen/mainButtonsHeight"
            android:contentDescription="@string/mainSimonButton"
            android:layout_marginBottom="-10dp"
            android:background="@drawable/explorer_boy"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>